[package]
name = "rust-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
mongodb = "2.3.1"
dotenv = "0.15.0"
uuid = "1.3.0"
serde = { version = "1.0.130", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.14"
strum_macros = "0.24.3"
strum = { version = "0.24.1", features = ["derive"] }
derive_more = "0.99.16"